<resources>
    <string name="app_name">Homework02</string>
    <string name="button_Viewtask">View Tasks</string>
    <string name="button_createTask">Create A Task</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="tesk_Information">Task Information</string>
    <string name="tesk_name">Name:</string>
    <string name="tesk_date">Date:</string>
    <string name="tesk_priority">Priority:</string>
    <string name="button_setdate">Set date</string>
    <string name="button_submit">Submit</string>
    <string name="button_high">High</string>
    <string name="button_Medium">Medium</string>
    <string name="button_Low">Low</string>
    <string name="hint_TaskName">Task Name</string>

</resources>