<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTask">

    <TextView
        android:id="@+id/textViewTaskInfo"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/tesk_Information"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/tesk_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskInfo" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/tesk_date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewPriority"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/tesk_priority"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <TextView
        android:id="@+id/textDisplayName"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskInfo" />

    <TextView
        android:id="@+id/textDisplayDate"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toBottomOf="@+id/textDisplayName" />

    <TextView
        android:id="@+id/textDisplayPriority"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textViewPriority"
        app:layout_constraintTop_toBottomOf="@+id/textDisplayDate" />

    <Button
        android:id="@+id/Cancelbutton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/button_cancel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriority" />

    <Button
        android:id="@+id/Deletebutton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/button_delete"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDisplayPriority" />
</androidx.constraintlayout.widget.ConstraintLayout>